# tiny-shop

./: .gitignore  README.md  stack.yaml  tiny-shop.cabal
src/: Main.hs  Models.hs  ShopApi.hs  Views.hs
static/: api.js
