name:                tiny-shop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/torchhound/tiny-shop#readme
license:             GPLV3
license-file:        LICENSE
author:              torchhound
maintainer:          https://github.com/torchhound
copyright:           2017 torchhound
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tiny-shop
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ShopApi, Models, Views
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, servant, servant-server, persistent, aeson, wai, warp, text, persistent-template, persistent-sqlite, monad-logger, string-conversions, servant-blaze, blaze-html
